--- a/13. Incrementing Counter/style.css
+++ b/13. Incrementing Counter/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #8e44ad;
+  background-color: darkcyan;
   color: #fff;
   font-family: 'Roboto Mono', sans-serif;
   display: flex;
